non admin should not be able to use the option to view book and user info

--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9804878048780488" branch-rate="0.8953488372093024" lines-covered="201" lines-valid="205" branches-covered="77" branches-valid="86" complexity="2.27027027027027" version="2.1.1" timestamp="1442515005667">
+<coverage line-rate="0.9806763285024155" branch-rate="0.8977272727272727" lines-covered="203" lines-valid="207" branches-covered="79" branches-valid="88" complexity="2.2972972972972974" version="2.1.1" timestamp="1442515936246">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9804878048780488" branch-rate="0.8953488372093024" complexity="2.27027027027027">
+		<package name="com.tw.biblioteca" line-rate="0.9806763285024155" branch-rate="0.8977272727272727" complexity="2.2972972972972974">
 			<classes>
 				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="17" branch="false"/>
-								<line number="9" hits="17" branch="false"/>
-								<line number="10" hits="17" branch="false"/>
-								<line number="11" hits="17" branch="false"/>
-								<line number="12" hits="17" branch="false"/>
-								<line number="13" hits="17" branch="false"/>
+								<line number="7" hits="18" branch="false"/>
+								<line number="9" hits="18" branch="false"/>
+								<line number="10" hits="18" branch="false"/>
+								<line number="11" hits="18" branch="false"/>
+								<line number="12" hits="18" branch="false"/>
+								<line number="13" hits="18" branch="false"/>
 							</lines>
 						</method>
 						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -35,12 +35,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="17" branch="false"/>
-						<line number="9" hits="17" branch="false"/>
-						<line number="10" hits="17" branch="false"/>
-						<line number="11" hits="17" branch="false"/>
-						<line number="12" hits="17" branch="false"/>
-						<line number="13" hits="17" branch="false"/>
+						<line number="7" hits="18" branch="false"/>
+						<line number="9" hits="18" branch="false"/>
+						<line number="10" hits="18" branch="false"/>
+						<line number="11" hits="18" branch="false"/>
+						<line number="12" hits="18" branch="false"/>
+						<line number="13" hits="18" branch="false"/>
 						<line number="16" hits="5" branch="false"/>
 						<line number="17" hits="5" branch="true" condition-coverage="100% (4/4)">
 							<conditions>
@@ -100,11 +100,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="136" branch="false"/>
-								<line number="10" hits="136" branch="false"/>
-								<line number="11" hits="136" branch="false"/>
-								<line number="12" hits="136" branch="false"/>
-								<line number="13" hits="136" branch="false"/>
+								<line number="9" hits="139" branch="false"/>
+								<line number="10" hits="139" branch="false"/>
+								<line number="11" hits="139" branch="false"/>
+								<line number="12" hits="139" branch="false"/>
+								<line number="13" hits="139" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -144,11 +144,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="136" branch="false"/>
-						<line number="10" hits="136" branch="false"/>
-						<line number="11" hits="136" branch="false"/>
-						<line number="12" hits="136" branch="false"/>
-						<line number="13" hits="136" branch="false"/>
+						<line number="9" hits="139" branch="false"/>
+						<line number="10" hits="139" branch="false"/>
+						<line number="11" hits="139" branch="false"/>
+						<line number="12" hits="139" branch="false"/>
+						<line number="13" hits="139" branch="false"/>
 						<line number="16" hits="13" branch="false"/>
 						<line number="17" hits="13" branch="false"/>
 						<line number="21" hits="41" branch="true" condition-coverage="100% (2/2)">
@@ -178,18 +178,18 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="38" branch="false"/>
-								<line number="9" hits="38" branch="false"/>
-								<line number="10" hits="38" branch="false"/>
-								<line number="11" hits="38" branch="false"/>
-								<line number="13" hits="38" branch="false"/>
-								<line number="14" hits="38" branch="false"/>
-								<line number="15" hits="38" branch="false"/>
-								<line number="16" hits="38" branch="false"/>
-								<line number="18" hits="38" branch="false"/>
-								<line number="19" hits="38" branch="false"/>
-								<line number="20" hits="38" branch="false"/>
-								<line number="21" hits="38" branch="false"/>
+								<line number="8" hits="39" branch="false"/>
+								<line number="9" hits="39" branch="false"/>
+								<line number="10" hits="39" branch="false"/>
+								<line number="11" hits="39" branch="false"/>
+								<line number="13" hits="39" branch="false"/>
+								<line number="14" hits="39" branch="false"/>
+								<line number="15" hits="39" branch="false"/>
+								<line number="16" hits="39" branch="false"/>
+								<line number="18" hits="39" branch="false"/>
+								<line number="19" hits="39" branch="false"/>
+								<line number="20" hits="39" branch="false"/>
+								<line number="21" hits="39" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;Lcom/tw/biblioteca/User;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -275,18 +275,18 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="8" hits="38" branch="false"/>
-						<line number="9" hits="38" branch="false"/>
-						<line number="10" hits="38" branch="false"/>
-						<line number="11" hits="38" branch="false"/>
-						<line number="13" hits="38" branch="false"/>
-						<line number="14" hits="38" branch="false"/>
-						<line number="15" hits="38" branch="false"/>
-						<line number="16" hits="38" branch="false"/>
-						<line number="18" hits="38" branch="false"/>
-						<line number="19" hits="38" branch="false"/>
-						<line number="20" hits="38" branch="false"/>
-						<line number="21" hits="38" branch="false"/>
+						<line number="8" hits="39" branch="false"/>
+						<line number="9" hits="39" branch="false"/>
+						<line number="10" hits="39" branch="false"/>
+						<line number="11" hits="39" branch="false"/>
+						<line number="13" hits="39" branch="false"/>
+						<line number="14" hits="39" branch="false"/>
+						<line number="15" hits="39" branch="false"/>
+						<line number="16" hits="39" branch="false"/>
+						<line number="18" hits="39" branch="false"/>
+						<line number="19" hits="39" branch="false"/>
+						<line number="20" hits="39" branch="false"/>
+						<line number="21" hits="39" branch="false"/>
 						<line number="24" hits="4" branch="false"/>
 						<line number="25" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -532,12 +532,12 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="129" branch="false"/>
-								<line number="11" hits="129" branch="false"/>
-								<line number="12" hits="129" branch="false"/>
-								<line number="13" hits="129" branch="false"/>
-								<line number="14" hits="129" branch="false"/>
-								<line number="15" hits="129" branch="false"/>
+								<line number="10" hits="132" branch="false"/>
+								<line number="11" hits="132" branch="false"/>
+								<line number="12" hits="132" branch="false"/>
+								<line number="13" hits="132" branch="false"/>
+								<line number="14" hits="132" branch="false"/>
+								<line number="15" hits="132" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -577,12 +577,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="129" branch="false"/>
-						<line number="11" hits="129" branch="false"/>
-						<line number="12" hits="129" branch="false"/>
-						<line number="13" hits="129" branch="false"/>
-						<line number="14" hits="129" branch="false"/>
-						<line number="15" hits="129" branch="false"/>
+						<line number="10" hits="132" branch="false"/>
+						<line number="11" hits="132" branch="false"/>
+						<line number="12" hits="132" branch="false"/>
+						<line number="13" hits="132" branch="false"/>
+						<line number="14" hits="132" branch="false"/>
+						<line number="15" hits="132" branch="false"/>
 						<line number="18" hits="6" branch="false"/>
 						<line number="19" hits="6" branch="false"/>
 						<line number="23" hits="16" branch="true" condition-coverage="100% (2/2)">
@@ -608,21 +608,21 @@
 						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7857142857142857" complexity="6.5">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7954545454545454" complexity="7.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Lcom/tw/biblioteca/Library;Lcom/tw/biblioteca/Authenticator;Lcom/tw/biblioteca/User;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="12" hits="14" branch="false"/>
-								<line number="13" hits="14" branch="false"/>
-								<line number="14" hits="14" branch="false"/>
-								<line number="15" hits="14" branch="false"/>
-								<line number="16" hits="14" branch="false"/>
-								<line number="17" hits="14" branch="false"/>
+								<line number="12" hits="15" branch="false"/>
+								<line number="13" hits="15" branch="false"/>
+								<line number="14" hits="15" branch="false"/>
+								<line number="15" hits="15" branch="false"/>
+								<line number="16" hits="15" branch="false"/>
+								<line number="17" hits="15" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.7857142857142857" complexity="0">
+						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.7954545454545454" complexity="0">
 							<lines>
-								<line number="21" hits="14" branch="true" condition-coverage="76% (29/38)">
+								<line number="21" hits="15" branch="true" condition-coverage="76% (29/38)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 										<condition number="1" type="jump" coverage="50%"/>
@@ -665,21 +665,27 @@
 								<line number="52" hits="2" branch="false"/>
 								<line number="54" hits="1" branch="false"/>
 								<line number="55" hits="1" branch="false"/>
-								<line number="57" hits="1" branch="false"/>
+								<line number="57" hits="2" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
 								<line number="58" hits="1" branch="false"/>
-								<line number="60" hits="1" branch="false"/>
-								<line number="62" hits="12" branch="false"/>
+								<line number="62" hits="1" branch="false"/>
+								<line number="64" hits="1" branch="false"/>
+								<line number="66" hits="1" branch="false"/>
+								<line number="68" hits="13" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="12" hits="14" branch="false"/>
-						<line number="13" hits="14" branch="false"/>
-						<line number="14" hits="14" branch="false"/>
-						<line number="15" hits="14" branch="false"/>
-						<line number="16" hits="14" branch="false"/>
-						<line number="17" hits="14" branch="false"/>
-						<line number="21" hits="14" branch="true" condition-coverage="76% (29/38)">
+						<line number="12" hits="15" branch="false"/>
+						<line number="13" hits="15" branch="false"/>
+						<line number="14" hits="15" branch="false"/>
+						<line number="15" hits="15" branch="false"/>
+						<line number="16" hits="15" branch="false"/>
+						<line number="17" hits="15" branch="false"/>
+						<line number="21" hits="15" branch="true" condition-coverage="76% (29/38)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 								<condition number="1" type="jump" coverage="50%"/>
@@ -722,30 +728,36 @@
 						<line number="52" hits="2" branch="false"/>
 						<line number="54" hits="1" branch="false"/>
 						<line number="55" hits="1" branch="false"/>
-						<line number="57" hits="1" branch="false"/>
+						<line number="57" hits="2" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
 						<line number="58" hits="1" branch="false"/>
-						<line number="60" hits="1" branch="false"/>
-						<line number="62" hits="12" branch="false"/>
+						<line number="62" hits="1" branch="false"/>
+						<line number="64" hits="1" branch="false"/>
+						<line number="66" hits="1" branch="false"/>
+						<line number="68" hits="13" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="11" hits="37" branch="false"/>
-								<line number="12" hits="37" branch="false"/>
-								<line number="13" hits="37" branch="false"/>
-								<line number="14" hits="37" branch="false"/>
-								<line number="15" hits="37" branch="false"/>
+								<line number="11" hits="38" branch="false"/>
+								<line number="12" hits="38" branch="false"/>
+								<line number="13" hits="38" branch="false"/>
+								<line number="14" hits="38" branch="false"/>
+								<line number="15" hits="38" branch="false"/>
 							</lines>
 						</method>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="17" hits="74" branch="false"/>
-								<line number="18" hits="74" branch="false"/>
-								<line number="19" hits="74" branch="false"/>
-								<line number="20" hits="74" branch="false"/>
-								<line number="21" hits="74" branch="false"/>
+								<line number="17" hits="77" branch="false"/>
+								<line number="18" hits="77" branch="false"/>
+								<line number="19" hits="77" branch="false"/>
+								<line number="20" hits="77" branch="false"/>
+								<line number="21" hits="77" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -785,21 +797,21 @@
 						</method>
 						<method name="role" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="42" hits="13" branch="false"/>
+								<line number="42" hits="15" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="11" hits="37" branch="false"/>
-						<line number="12" hits="37" branch="false"/>
-						<line number="13" hits="37" branch="false"/>
-						<line number="14" hits="37" branch="false"/>
-						<line number="15" hits="37" branch="false"/>
-						<line number="17" hits="74" branch="false"/>
-						<line number="18" hits="74" branch="false"/>
-						<line number="19" hits="74" branch="false"/>
-						<line number="20" hits="74" branch="false"/>
-						<line number="21" hits="74" branch="false"/>
+						<line number="11" hits="38" branch="false"/>
+						<line number="12" hits="38" branch="false"/>
+						<line number="13" hits="38" branch="false"/>
+						<line number="14" hits="38" branch="false"/>
+						<line number="15" hits="38" branch="false"/>
+						<line number="17" hits="77" branch="false"/>
+						<line number="18" hits="77" branch="false"/>
+						<line number="19" hits="77" branch="false"/>
+						<line number="20" hits="77" branch="false"/>
+						<line number="21" hits="77" branch="false"/>
 						<line number="25" hits="39" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
@@ -821,7 +833,7 @@
 						<line number="32" hits="26" branch="false"/>
 						<line number="34" hits="11" branch="false"/>
 						<line number="38" hits="6" branch="false"/>
-						<line number="42" hits="13" branch="false"/>
+						<line number="42" hits="15" branch="false"/>
 						<line number="46" hits="2" branch="false"/>
 						<line number="47" hits="2" branch="false"/>
 					</lines>
