--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9806763285024155" branch-rate="0.8977272727272727" lines-covered="203" lines-valid="207" branches-covered="79" branches-valid="88" complexity="2.2972972972972974" version="2.1.1" timestamp="1442515936753">
+<coverage line-rate="0.9813953488372092" branch-rate="0.9" lines-covered="211" lines-valid="215" branches-covered="81" branches-valid="90" complexity="2.324324324324324" version="2.1.1" timestamp="1442551316518">
 	<packages />
 </coverage>
