--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9806763285024155" branch-rate="0.8977272727272727" lines-covered="203" lines-valid="207" branches-covered="79" branches-valid="88" complexity="2.2972972972972974" version="2.1.1" timestamp="1442515936246">
+<coverage line-rate="0.9813953488372092" branch-rate="0.9" lines-covered="211" lines-valid="215" branches-covered="81" branches-valid="90" complexity="2.324324324324324" version="2.1.1" timestamp="1442551316001">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9806763285024155" branch-rate="0.8977272727272727" complexity="2.2972972972972974">
+		<package name="com.tw.biblioteca" line-rate="0.9813953488372092" branch-rate="0.9" complexity="2.324324324324324">
 			<classes>
 				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
@@ -474,58 +474,70 @@
 						<line number="20" hits="3" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="1.5">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/User;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="4" branch="false"/>
-								<line number="12" hits="4" branch="false"/>
-								<line number="13" hits="4" branch="false"/>
-								<line number="14" hits="4" branch="false"/>
-								<line number="15" hits="4" branch="false"/>
-								<line number="16" hits="4" branch="false"/>
-								<line number="17" hits="4" branch="false"/>
-								<line number="18" hits="4" branch="false"/>
-								<line number="19" hits="4" branch="false"/>
-								<line number="20" hits="4" branch="false"/>
-								<line number="22" hits="4" branch="true" condition-coverage="100% (2/2)">
+								<line number="10" hits="5" branch="false"/>
+								<line number="12" hits="5" branch="false"/>
+								<line number="13" hits="5" branch="false"/>
+								<line number="14" hits="5" branch="false"/>
+								<line number="15" hits="5" branch="false"/>
+								<line number="16" hits="5" branch="false"/>
+								<line number="17" hits="5" branch="false"/>
+								<line number="18" hits="5" branch="false"/>
+								<line number="19" hits="5" branch="false"/>
+								<line number="20" hits="5" branch="false"/>
+								<line number="22" hits="5" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="23" hits="1" branch="false"/>
-								<line number="25" hits="4" branch="false"/>
+								<line number="25" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="26" hits="1" branch="false"/>
+								<line number="28" hits="5" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="28" hits="4" branch="false"/>
-								<line number="29" hits="4" branch="false"/>
-								<line number="30" hits="4" branch="false"/>
+								<line number="31" hits="5" branch="false"/>
+								<line number="32" hits="5" branch="false"/>
+								<line number="33" hits="5" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="4" branch="false"/>
-						<line number="12" hits="4" branch="false"/>
-						<line number="13" hits="4" branch="false"/>
-						<line number="14" hits="4" branch="false"/>
-						<line number="15" hits="4" branch="false"/>
-						<line number="16" hits="4" branch="false"/>
-						<line number="17" hits="4" branch="false"/>
-						<line number="18" hits="4" branch="false"/>
-						<line number="19" hits="4" branch="false"/>
-						<line number="20" hits="4" branch="false"/>
-						<line number="22" hits="4" branch="true" condition-coverage="100% (2/2)">
+						<line number="10" hits="5" branch="false"/>
+						<line number="12" hits="5" branch="false"/>
+						<line number="13" hits="5" branch="false"/>
+						<line number="14" hits="5" branch="false"/>
+						<line number="15" hits="5" branch="false"/>
+						<line number="16" hits="5" branch="false"/>
+						<line number="17" hits="5" branch="false"/>
+						<line number="18" hits="5" branch="false"/>
+						<line number="19" hits="5" branch="false"/>
+						<line number="20" hits="5" branch="false"/>
+						<line number="22" hits="5" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="23" hits="1" branch="false"/>
-						<line number="25" hits="4" branch="false"/>
-						<line number="28" hits="4" branch="false"/>
-						<line number="29" hits="4" branch="false"/>
-						<line number="30" hits="4" branch="false"/>
+						<line number="25" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="26" hits="1" branch="false"/>
+						<line number="28" hits="5" branch="false"/>
+						<line number="31" hits="5" branch="false"/>
+						<line number="32" hits="5" branch="false"/>
+						<line number="33" hits="5" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
@@ -671,10 +683,10 @@
 									</conditions>
 								</line>
 								<line number="58" hits="1" branch="false"/>
-								<line number="62" hits="1" branch="false"/>
-								<line number="64" hits="1" branch="false"/>
-								<line number="66" hits="1" branch="false"/>
-								<line number="68" hits="13" branch="false"/>
+								<line number="61" hits="1" branch="false"/>
+								<line number="63" hits="1" branch="false"/>
+								<line number="65" hits="1" branch="false"/>
+								<line number="67" hits="13" branch="false"/>
 							</lines>
 						</method>
 					</methods>
@@ -734,108 +746,120 @@
 							</conditions>
 						</line>
 						<line number="58" hits="1" branch="false"/>
-						<line number="62" hits="1" branch="false"/>
-						<line number="64" hits="1" branch="false"/>
-						<line number="66" hits="1" branch="false"/>
-						<line number="68" hits="13" branch="false"/>
+						<line number="61" hits="1" branch="false"/>
+						<line number="63" hits="1" branch="false"/>
+						<line number="65" hits="1" branch="false"/>
+						<line number="67" hits="13" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="11" hits="38" branch="false"/>
-								<line number="12" hits="38" branch="false"/>
-								<line number="13" hits="38" branch="false"/>
 								<line number="14" hits="38" branch="false"/>
 								<line number="15" hits="38" branch="false"/>
+								<line number="16" hits="38" branch="false"/>
+								<line number="17" hits="38" branch="false"/>
+								<line number="18" hits="38" branch="false"/>
+								<line number="19" hits="38" branch="false"/>
+								<line number="20" hits="38" branch="false"/>
+								<line number="21" hits="38" branch="false"/>
 							</lines>
 						</method>
-						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="17" hits="77" branch="false"/>
-								<line number="18" hits="77" branch="false"/>
-								<line number="19" hits="77" branch="false"/>
-								<line number="20" hits="77" branch="false"/>
-								<line number="21" hits="77" branch="false"/>
+								<line number="23" hits="78" branch="false"/>
+								<line number="24" hits="78" branch="false"/>
+								<line number="25" hits="78" branch="false"/>
+								<line number="26" hits="78" branch="false"/>
+								<line number="27" hits="78" branch="false"/>
+								<line number="28" hits="78" branch="false"/>
+								<line number="29" hits="78" branch="false"/>
+								<line number="30" hits="78" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="38" hits="6" branch="false"/>
+								<line number="47" hits="6" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="25" hits="39" branch="true" condition-coverage="100% (2/2)">
+								<line number="34" hits="39" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="26" hits="1" branch="false"/>
-								<line number="28" hits="38" branch="true" condition-coverage="100% (2/2)">
+								<line number="35" hits="1" branch="false"/>
+								<line number="37" hits="38" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="29" hits="1" branch="false"/>
-								<line number="30" hits="37" branch="false"/>
-								<line number="31" hits="37" branch="true" condition-coverage="100% (2/2)">
+								<line number="38" hits="1" branch="false"/>
+								<line number="39" hits="37" branch="false"/>
+								<line number="40" hits="37" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="32" hits="26" branch="false"/>
-								<line number="34" hits="11" branch="false"/>
+								<line number="41" hits="26" branch="false"/>
+								<line number="43" hits="11" branch="false"/>
 							</lines>
 						</method>
 						<method name="printLibraryNumber" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="46" hits="2" branch="false"/>
-								<line number="47" hits="2" branch="false"/>
+								<line number="55" hits="2" branch="false"/>
+								<line number="56" hits="2" branch="false"/>
 							</lines>
 						</method>
 						<method name="role" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="42" hits="15" branch="false"/>
+								<line number="51" hits="20" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="11" hits="38" branch="false"/>
-						<line number="12" hits="38" branch="false"/>
-						<line number="13" hits="38" branch="false"/>
 						<line number="14" hits="38" branch="false"/>
 						<line number="15" hits="38" branch="false"/>
-						<line number="17" hits="77" branch="false"/>
-						<line number="18" hits="77" branch="false"/>
-						<line number="19" hits="77" branch="false"/>
-						<line number="20" hits="77" branch="false"/>
-						<line number="21" hits="77" branch="false"/>
-						<line number="25" hits="39" branch="true" condition-coverage="100% (2/2)">
+						<line number="16" hits="38" branch="false"/>
+						<line number="17" hits="38" branch="false"/>
+						<line number="18" hits="38" branch="false"/>
+						<line number="19" hits="38" branch="false"/>
+						<line number="20" hits="38" branch="false"/>
+						<line number="21" hits="38" branch="false"/>
+						<line number="23" hits="78" branch="false"/>
+						<line number="24" hits="78" branch="false"/>
+						<line number="25" hits="78" branch="false"/>
+						<line number="26" hits="78" branch="false"/>
+						<line number="27" hits="78" branch="false"/>
+						<line number="28" hits="78" branch="false"/>
+						<line number="29" hits="78" branch="false"/>
+						<line number="30" hits="78" branch="false"/>
+						<line number="34" hits="39" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="26" hits="1" branch="false"/>
-						<line number="28" hits="38" branch="true" condition-coverage="100% (2/2)">
+						<line number="35" hits="1" branch="false"/>
+						<line number="37" hits="38" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="29" hits="1" branch="false"/>
-						<line number="30" hits="37" branch="false"/>
-						<line number="31" hits="37" branch="true" condition-coverage="100% (2/2)">
+						<line number="38" hits="1" branch="false"/>
+						<line number="39" hits="37" branch="false"/>
+						<line number="40" hits="37" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="32" hits="26" branch="false"/>
-						<line number="34" hits="11" branch="false"/>
-						<line number="38" hits="6" branch="false"/>
-						<line number="42" hits="15" branch="false"/>
-						<line number="46" hits="2" branch="false"/>
-						<line number="47" hits="2" branch="false"/>
+						<line number="41" hits="26" branch="false"/>
+						<line number="43" hits="11" branch="false"/>
+						<line number="47" hits="6" branch="false"/>
+						<line number="51" hits="20" branch="false"/>
+						<line number="55" hits="2" branch="false"/>
+						<line number="56" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
