--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9813953488372092" branch-rate="0.9" lines-covered="211" lines-valid="215" branches-covered="81" branches-valid="90" complexity="2.324324324324324" version="2.1.1" timestamp="1442551316518">
+<coverage line-rate="0.9817351598173516" branch-rate="0.9021739130434783" lines-covered="215" lines-valid="219" branches-covered="83" branches-valid="92" complexity="2.3157894736842106" version="2.1.1" timestamp="1442551987268">
 	<packages />
 </coverage>
