--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9813953488372092" branch-rate="0.9" lines-covered="211" lines-valid="215" branches-covered="81" branches-valid="90" complexity="2.324324324324324" version="2.1.1" timestamp="1442551316001">
+<coverage line-rate="0.9817351598173516" branch-rate="0.9021739130434783" lines-covered="215" lines-valid="219" branches-covered="83" branches-valid="92" complexity="2.3157894736842106" version="2.1.1" timestamp="1442551986712">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9813953488372092" branch-rate="0.9" complexity="2.324324324324324">
+		<package name="com.tw.biblioteca" line-rate="0.9817351598173516" branch-rate="0.9021739130434783" complexity="2.3157894736842106">
 			<classes>
 				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="18" branch="false"/>
-								<line number="9" hits="18" branch="false"/>
-								<line number="10" hits="18" branch="false"/>
-								<line number="11" hits="18" branch="false"/>
-								<line number="12" hits="18" branch="false"/>
-								<line number="13" hits="18" branch="false"/>
+								<line number="7" hits="19" branch="false"/>
+								<line number="9" hits="19" branch="false"/>
+								<line number="10" hits="19" branch="false"/>
+								<line number="11" hits="19" branch="false"/>
+								<line number="12" hits="19" branch="false"/>
+								<line number="13" hits="19" branch="false"/>
 							</lines>
 						</method>
 						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -35,12 +35,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="18" branch="false"/>
-						<line number="9" hits="18" branch="false"/>
-						<line number="10" hits="18" branch="false"/>
-						<line number="11" hits="18" branch="false"/>
-						<line number="12" hits="18" branch="false"/>
-						<line number="13" hits="18" branch="false"/>
+						<line number="7" hits="19" branch="false"/>
+						<line number="9" hits="19" branch="false"/>
+						<line number="10" hits="19" branch="false"/>
+						<line number="11" hits="19" branch="false"/>
+						<line number="12" hits="19" branch="false"/>
+						<line number="13" hits="19" branch="false"/>
 						<line number="16" hits="5" branch="false"/>
 						<line number="17" hits="5" branch="true" condition-coverage="100% (4/4)">
 							<conditions>
@@ -100,11 +100,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="139" branch="false"/>
-								<line number="10" hits="139" branch="false"/>
-								<line number="11" hits="139" branch="false"/>
-								<line number="12" hits="139" branch="false"/>
-								<line number="13" hits="139" branch="false"/>
+								<line number="9" hits="142" branch="false"/>
+								<line number="10" hits="142" branch="false"/>
+								<line number="11" hits="142" branch="false"/>
+								<line number="12" hits="142" branch="false"/>
+								<line number="13" hits="142" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -144,11 +144,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="139" branch="false"/>
-						<line number="10" hits="139" branch="false"/>
-						<line number="11" hits="139" branch="false"/>
-						<line number="12" hits="139" branch="false"/>
-						<line number="13" hits="139" branch="false"/>
+						<line number="9" hits="142" branch="false"/>
+						<line number="10" hits="142" branch="false"/>
+						<line number="11" hits="142" branch="false"/>
+						<line number="12" hits="142" branch="false"/>
+						<line number="13" hits="142" branch="false"/>
 						<line number="16" hits="13" branch="false"/>
 						<line number="17" hits="13" branch="false"/>
 						<line number="21" hits="41" branch="true" condition-coverage="100% (2/2)">
@@ -178,18 +178,18 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="8" hits="39" branch="false"/>
-								<line number="9" hits="39" branch="false"/>
-								<line number="10" hits="39" branch="false"/>
-								<line number="11" hits="39" branch="false"/>
-								<line number="13" hits="39" branch="false"/>
-								<line number="14" hits="39" branch="false"/>
-								<line number="15" hits="39" branch="false"/>
-								<line number="16" hits="39" branch="false"/>
-								<line number="18" hits="39" branch="false"/>
-								<line number="19" hits="39" branch="false"/>
-								<line number="20" hits="39" branch="false"/>
-								<line number="21" hits="39" branch="false"/>
+								<line number="8" hits="40" branch="false"/>
+								<line number="9" hits="40" branch="false"/>
+								<line number="10" hits="40" branch="false"/>
+								<line number="11" hits="40" branch="false"/>
+								<line number="13" hits="40" branch="false"/>
+								<line number="14" hits="40" branch="false"/>
+								<line number="15" hits="40" branch="false"/>
+								<line number="16" hits="40" branch="false"/>
+								<line number="18" hits="40" branch="false"/>
+								<line number="19" hits="40" branch="false"/>
+								<line number="20" hits="40" branch="false"/>
+								<line number="21" hits="40" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;Lcom/tw/biblioteca/User;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -275,18 +275,18 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="8" hits="39" branch="false"/>
-						<line number="9" hits="39" branch="false"/>
-						<line number="10" hits="39" branch="false"/>
-						<line number="11" hits="39" branch="false"/>
-						<line number="13" hits="39" branch="false"/>
-						<line number="14" hits="39" branch="false"/>
-						<line number="15" hits="39" branch="false"/>
-						<line number="16" hits="39" branch="false"/>
-						<line number="18" hits="39" branch="false"/>
-						<line number="19" hits="39" branch="false"/>
-						<line number="20" hits="39" branch="false"/>
-						<line number="21" hits="39" branch="false"/>
+						<line number="8" hits="40" branch="false"/>
+						<line number="9" hits="40" branch="false"/>
+						<line number="10" hits="40" branch="false"/>
+						<line number="11" hits="40" branch="false"/>
+						<line number="13" hits="40" branch="false"/>
+						<line number="14" hits="40" branch="false"/>
+						<line number="15" hits="40" branch="false"/>
+						<line number="16" hits="40" branch="false"/>
+						<line number="18" hits="40" branch="false"/>
+						<line number="19" hits="40" branch="false"/>
+						<line number="20" hits="40" branch="false"/>
+						<line number="21" hits="40" branch="false"/>
 						<line number="24" hits="4" branch="false"/>
 						<line number="25" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -544,12 +544,12 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="132" branch="false"/>
-								<line number="11" hits="132" branch="false"/>
-								<line number="12" hits="132" branch="false"/>
-								<line number="13" hits="132" branch="false"/>
-								<line number="14" hits="132" branch="false"/>
-								<line number="15" hits="132" branch="false"/>
+								<line number="10" hits="135" branch="false"/>
+								<line number="11" hits="135" branch="false"/>
+								<line number="12" hits="135" branch="false"/>
+								<line number="13" hits="135" branch="false"/>
+								<line number="14" hits="135" branch="false"/>
+								<line number="15" hits="135" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -589,12 +589,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="132" branch="false"/>
-						<line number="11" hits="132" branch="false"/>
-						<line number="12" hits="132" branch="false"/>
-						<line number="13" hits="132" branch="false"/>
-						<line number="14" hits="132" branch="false"/>
-						<line number="15" hits="132" branch="false"/>
+						<line number="10" hits="135" branch="false"/>
+						<line number="11" hits="135" branch="false"/>
+						<line number="12" hits="135" branch="false"/>
+						<line number="13" hits="135" branch="false"/>
+						<line number="14" hits="135" branch="false"/>
+						<line number="15" hits="135" branch="false"/>
 						<line number="18" hits="6" branch="false"/>
 						<line number="19" hits="6" branch="false"/>
 						<line number="23" hits="16" branch="true" condition-coverage="100% (2/2)">
@@ -620,21 +620,21 @@
 						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7954545454545454" complexity="7.0">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.8043478260869565" complexity="7.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Lcom/tw/biblioteca/Library;Lcom/tw/biblioteca/Authenticator;Lcom/tw/biblioteca/User;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="12" hits="15" branch="false"/>
-								<line number="13" hits="15" branch="false"/>
-								<line number="14" hits="15" branch="false"/>
-								<line number="15" hits="15" branch="false"/>
-								<line number="16" hits="15" branch="false"/>
-								<line number="17" hits="15" branch="false"/>
+								<line number="12" hits="16" branch="false"/>
+								<line number="13" hits="16" branch="false"/>
+								<line number="14" hits="16" branch="false"/>
+								<line number="15" hits="16" branch="false"/>
+								<line number="16" hits="16" branch="false"/>
+								<line number="17" hits="16" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.7954545454545454" complexity="0">
+						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.8043478260869565" complexity="0">
 							<lines>
-								<line number="21" hits="15" branch="true" condition-coverage="76% (29/38)">
+								<line number="21" hits="16" branch="true" condition-coverage="76% (29/38)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 										<condition number="1" type="jump" coverage="50%"/>
@@ -677,27 +677,33 @@
 								<line number="52" hits="2" branch="false"/>
 								<line number="54" hits="1" branch="false"/>
 								<line number="55" hits="1" branch="false"/>
-								<line number="57" hits="2" branch="true" condition-coverage="100% (2/2)">
+								<line number="57" hits="3" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="58" hits="1" branch="false"/>
-								<line number="61" hits="1" branch="false"/>
-								<line number="63" hits="1" branch="false"/>
+								<line number="60" hits="2" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="62" hits="1" branch="false"/>
 								<line number="65" hits="1" branch="false"/>
-								<line number="67" hits="13" branch="false"/>
+								<line number="67" hits="1" branch="false"/>
+								<line number="69" hits="1" branch="false"/>
+								<line number="71" hits="14" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="12" hits="15" branch="false"/>
-						<line number="13" hits="15" branch="false"/>
-						<line number="14" hits="15" branch="false"/>
-						<line number="15" hits="15" branch="false"/>
-						<line number="16" hits="15" branch="false"/>
-						<line number="17" hits="15" branch="false"/>
-						<line number="21" hits="15" branch="true" condition-coverage="76% (29/38)">
+						<line number="12" hits="16" branch="false"/>
+						<line number="13" hits="16" branch="false"/>
+						<line number="14" hits="16" branch="false"/>
+						<line number="15" hits="16" branch="false"/>
+						<line number="16" hits="16" branch="false"/>
+						<line number="17" hits="16" branch="false"/>
+						<line number="21" hits="16" branch="true" condition-coverage="76% (29/38)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 								<condition number="1" type="jump" coverage="50%"/>
@@ -740,19 +746,25 @@
 						<line number="52" hits="2" branch="false"/>
 						<line number="54" hits="1" branch="false"/>
 						<line number="55" hits="1" branch="false"/>
-						<line number="57" hits="2" branch="true" condition-coverage="100% (2/2)">
+						<line number="57" hits="3" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="58" hits="1" branch="false"/>
-						<line number="61" hits="1" branch="false"/>
-						<line number="63" hits="1" branch="false"/>
+						<line number="60" hits="2" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="62" hits="1" branch="false"/>
 						<line number="65" hits="1" branch="false"/>
-						<line number="67" hits="13" branch="false"/>
+						<line number="67" hits="1" branch="false"/>
+						<line number="69" hits="1" branch="false"/>
+						<line number="71" hits="14" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="2.0">
+				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="1.8571428571428572">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
@@ -768,14 +780,14 @@
 						</method>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="23" hits="78" branch="false"/>
-								<line number="24" hits="78" branch="false"/>
-								<line number="25" hits="78" branch="false"/>
-								<line number="26" hits="78" branch="false"/>
-								<line number="27" hits="78" branch="false"/>
-								<line number="28" hits="78" branch="false"/>
-								<line number="29" hits="78" branch="false"/>
-								<line number="30" hits="78" branch="false"/>
+								<line number="23" hits="83" branch="false"/>
+								<line number="24" hits="83" branch="false"/>
+								<line number="25" hits="83" branch="false"/>
+								<line number="26" hits="83" branch="false"/>
+								<line number="27" hits="83" branch="false"/>
+								<line number="28" hits="83" branch="false"/>
+								<line number="29" hits="83" branch="false"/>
+								<line number="30" hits="83" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -807,6 +819,12 @@
 								<line number="43" hits="11" branch="false"/>
 							</lines>
 						</method>
+						<method name="printInfo" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+							<lines>
+								<line number="59" hits="2" branch="false"/>
+								<line number="62" hits="2" branch="false"/>
+							</lines>
+						</method>
 						<method name="printLibraryNumber" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="55" hits="2" branch="false"/>
@@ -815,7 +833,7 @@
 						</method>
 						<method name="role" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="51" hits="20" branch="false"/>
+								<line number="51" hits="23" branch="false"/>
 							</lines>
 						</method>
 					</methods>
@@ -828,14 +846,14 @@
 						<line number="19" hits="38" branch="false"/>
 						<line number="20" hits="38" branch="false"/>
 						<line number="21" hits="38" branch="false"/>
-						<line number="23" hits="78" branch="false"/>
-						<line number="24" hits="78" branch="false"/>
-						<line number="25" hits="78" branch="false"/>
-						<line number="26" hits="78" branch="false"/>
-						<line number="27" hits="78" branch="false"/>
-						<line number="28" hits="78" branch="false"/>
-						<line number="29" hits="78" branch="false"/>
-						<line number="30" hits="78" branch="false"/>
+						<line number="23" hits="83" branch="false"/>
+						<line number="24" hits="83" branch="false"/>
+						<line number="25" hits="83" branch="false"/>
+						<line number="26" hits="83" branch="false"/>
+						<line number="27" hits="83" branch="false"/>
+						<line number="28" hits="83" branch="false"/>
+						<line number="29" hits="83" branch="false"/>
+						<line number="30" hits="83" branch="false"/>
 						<line number="34" hits="39" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
@@ -857,9 +875,11 @@
 						<line number="41" hits="26" branch="false"/>
 						<line number="43" hits="11" branch="false"/>
 						<line number="47" hits="6" branch="false"/>
-						<line number="51" hits="20" branch="false"/>
+						<line number="51" hits="23" branch="false"/>
 						<line number="55" hits="2" branch="false"/>
 						<line number="56" hits="2" branch="false"/>
+						<line number="59" hits="2" branch="false"/>
+						<line number="62" hits="2" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
